--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-openai>=1.6.0
 langchain>=0.2.0
 langchain-community>=0.2.0
+gpt4all>=2.7.0
 faiss-cpu
 pandas
 scipy
-python-dotenv
+sentence-transformers
